--- a/EurovisionRanker2023.html
+++ b/EurovisionRanker2023.html
@@ -8,7 +8,7 @@
     </head>
 <body>
     <div>EuroVision 2023</div>
-    <button class="saveButton"onclick="save()">save</button>
+    <button class="saveButton"onclick="save()">SAVE</button>
     <div id="rankArea"></div>
 </body>
 <script src="EurovisionRanker2023.js"></script>
