update working hopfully

--- a/EurovisionRanker2023.html
+++ b/EurovisionRanker2023.html
@@ -8,7 +8,9 @@
     </head>
 <body>
     <div>EuroVision 2023</div>
-    <button class="saveButton"onclick="save()">SAVE</button>
+    <div class="saveArea">
+        <button class="saveButton"onclick="save()">SAVE</button>
+    </div>
     <div id="rankArea"></div>
 </body>
 <script src="EurovisionRanker2023.js"></script>
